examples/test/testpolicy18150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18150
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key44: value20
      key19: value43
      key28: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value48
      podSelector:
        matchLabels:
          key43: value38
